ISSUE #358 Show canvas overflow. Create App.Builder.Widgets.CanvasOverflowLayer

--- a/app/assets/stylesheets/interapptive.css.less
+++ b/app/assets/stylesheets/interapptive.css.less
@@ -76,7 +76,6 @@ button#export {
 
 // Tablet & Builder
 .canvas-column {
-  background-image: asset-url('tablet.png');
   background-repeat: no-repeat;
   background-position: center;
   height: @appHeight + 50px;
@@ -87,6 +86,7 @@ button#export {
 }
 
 canvas#builder-canvas {
+  border: 2px solid green;
   position: relative;
   top: 82px;
   left: 0px;
